--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <body>
 
         <link rel="stylesheet" href="style.css" type="text/css">
+        <div class="description">
+          <h3>Basic Tetris</h3>
+          <p>
+            Hey! This is my first attempt at making a game and using JavaScript, so be kind.
+            Feel free to raise issues on my <a href="https://github.com/dhruvAgarwal2173/basic-tetris">
+                                                                GitHub repo</a>.
+          </p>
+        </div>
 
         <h3>Score: <span id="score">0</span></h3>
         <button id="start-button">Start/ Pause</button>
